# Senticli

./: .gitignore  CMakeLists.txt  README.md
packaging/: README.md
packaging/linux/: senticli.desktop.in
qml/: Main.qml
qml/components/: CommandBubble.qml  Eye.qml  Mouth.qml
qml/theme/: Colors.qml  Typography.qml
qml/views/: FaceView.qml  InputBar.qml  SettingsView.qml  SetupWizard.qml  StatusStrip.qml  TerminalView.qml
src/: main.cpp
src/core/: AppController.cpp
src/core/include/: AppController.h
src/models/: MessageModel.cpp  MessageModel.h
